# TaskForge-API

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  projects.py  tickets.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  models.py
app/repositories/: repositories.py
app/schemas/: schemas.py
app/services/: services.py
app/static/: index.html
tests/: conftest.py  test_api.py
