[project]
name = "project-tracker-api"
version = "0.1.0"
description = "A mini-Jira style project and ticket tracking API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0", "uvicorn[standard]>=0.30", "sqlalchemy>=2.0", "asyncpg>=0.29",
  "aiosqlite>=0.20", "alembic>=1.13", "pydantic-settings>=2.4", "PyJWT>=2.9",
  "passlib[bcrypt]>=1.7.4", "email-validator>=2.2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
